# exploratore

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  arduino_routine.cpp  arduino_routine.hpp  event_listener.hpp  imu_wake_on_motion.cpp  imu_wake_on_motion.h  main.cpp
main/evil_remote/: evil_remote.cpp  evil_remote.hpp  ir.h  world_ir_codes.h
main/patterns/: beatwave.cpp  beatwave.h  black.cpp  black.h  blendwave.cpp  blendwave.h  blur.cpp  blur.h  confetti.cpp  confetti.h  confetti_pal.cpp  confetti_pal.h  dot_beat.cpp  dot_beat.h  easing.cpp  easing.h  fade_in.cpp  fade_in.h  inoise8_fire.cpp  inoise8_fire.h  inoise8_mover.cpp  inoise8_mover.h  inoise8_pal.cpp  inoise8_pal.h  juggle_pal.cpp  juggle_pal.h  lightnings.cpp  lightnings.h  matrix_pal.cpp  matrix_pal.h  matrix_ray.cpp  matrix_ray.h  noise16_1.cpp  noise16_1.h  noise16_2.cpp  noise16_2.h  noise16_3.cpp  noise16_3.h  noise_plus_palette.cpp  one_sine_pal.cpp  (+32 more)
test/: CMakeLists.txt  sdkconfig
test/main/: CMakeLists.txt  example_unit_test_test.c
